# dnq1

./: .gitignore  Makefile.am  README  README.md  autogen.sh  configure.ac  grub1floppy  grub2iso  grub2tftp  launch-flp  launch-iso  launch-pxe
include/: multiboot.h
include/dnq/: dnq.h  tid.h  types.h
libs/: Makefile.am  bzero.c  icxxabi.cc  icxxabi.h  malloc.c  memcpy.c  memset.c  printf.c  sbrk.c  serial.c  strlen.c  types.h
mkern/: Makefile.am  crt0-x86.S  crtn.S  main.cc  mkern.lds  spinlock.h  tcb.cc  tcb.h  trap.cc  trapasm.S  vectors.pl
mkldr/: Makefile.am  bin2c.pl  crt0-i386.S  elf32.cc  elf32.h  entryap.S  lapic.cc  main.cc  mkldr.lds  mp.cc  mp.h  subc.h
rtask/: Makefile.am  crt0-i386.S  crtn-i386.S  main.cc  rtask.lds
